--- a/1. README.md
+++ b/1. README.md
@@ -3,7 +3,7 @@
 Below is a series of projects I have completed either for class or out of personal interest. Descriptions for each project
 can be found within the project, but a summary of each is provided below for easier reference.
 
-## Binary Search
+### Binary Search
 Below is a binary search function that doesn't involve splicing the list as that takes O(k) time and I want to avoid that cost. Instead, I create default variables for the bounds of where I am searching to inform the function of the desired index range. 
 
 ## Hashlist ##
