--- a/1. README.md
+++ b/1. README.md
@@ -6,11 +6,11 @@ can be found within the project, but a summary of each is provided below for eas
 ### Binary Search
 Below is a binary search function that doesn't involve splicing the list as that takes O(k) time and I want to avoid that cost. Instead, I create default variables for the bounds of where I am searching to inform the function of the desired index range. 
 
-## Hashlist ##
+### Hashlist
 The function creates a Hashlist using a standard python list of some desired length and values (assumed to be numbers) and stored inside. I use the value divided by list length to obtain the key and use linear probing to handle collisions.
 
-## Sorting Lists ##
+### Sorting Lists
 I implement four different list-search algorithms below. Insertion-sort, Bubble-sort, Selection-sort, and Merge-sort. I tried to create a Merge-sort function that just bounds values so I wouldn't have to continually slice the list, which takes O(k) time. It isn't a huge deal as the function already takes O(nlogn) time, but I wanted to see if I could do it.
 
-## Stack and Linked List Data Structures ##
+### Stack and Linked List Data Structures
 Below are a class for a stack and linked list. These data structures can, of course, be accessed without having to build the actual mechanics, but this gave me a much better understanding of how they work and operate. I provided Big Oh Running time analyses for each function.
